--- a/admin/index.html
+++ b/admin/index.html
@@ -167,13 +167,13 @@
             <div class="infor-author">
                 <div class="author-1">
                     <strong>Quỳnh Hoa</strong>
-                    <a href="" class="link-git">Git-hub</a>
-                    <a href="" class="link-fb">FB</a>
+                    <a href="https://github.com/QuynhHoaNguyen" class="GitHub">Git-hub</a>
+                    <a href="https://www.facebook.com/BCATg.0211" class="Facebook">FB</a>
                 </div>
                 <div class="author-2">
                     <strong>Thế Phước</strong>
-                    <a href="" class="link-git">Git-hub</a>
-                    <a href="" class="link-fb">FB</a>
+                    <a href="https://github.com/phuocbt98" class="GitHub">Git-hub</a>
+                    <a href="https://www.facebook.com/phuocbt98" class="Facebook">FB</a>
                 </div>
             </div>
         </div>
