change interface layout

--- a/admin/login.html
+++ b/admin/login.html
@@ -12,7 +12,7 @@
     <div class="container">
         <form action="" class="form-login" autocomplete="off" >
             <img src="./access/img/admin.jpg" alt="">
-            <h1>Admin Login</h1>
+            <h1>Login</h1>
             <div class="form-text">
                 <label for="user_name">
                     <i class="fas fa-user"></i>
@@ -28,6 +28,7 @@
                 <input type="text" name="password" id="password">
             </div>
             <button type="submit">Login</button>
+            <button type="submit">Sign in</button>
         </form>
     </div>
 
