--- a/customer/Bphone.html
+++ b/customer/Bphone.html
@@ -19,8 +19,6 @@
                 <input type="text" placeholder="Tìm kiếm..."/>
             </div>
 
-            
-
             <div class="icon">
                 <div >
                     <img src="../public/icon_account.jpg" class="img-64px" alt="icon_account">
@@ -30,22 +28,15 @@
                     <li><a href=""><i> Sign in</i></a></li>
                 </ul>
             </div>
-
-            
-
         </div>
-        <div>
-            <marquee direction="left" behavior="alternate">
-                Chào mừng quý khách đến với di động HP
-            </marquee>
-        </div>
+
         <div id="main">
 
             <div class="menu">
                 <ul>
                     <li><a href="home.html">Trang chủ</a></li>
                     <li><a href="Vsmart.html">Vsmart</a></li>
-                    <li><a href="Bphone.html">Bphone</a></li>
+                    <li><a href="">Bphone</a></li>
                     <li><a href="">SamSung</a></li>
                     <li><a href="">Apple</a></li>
                     <li><a href="">Oppo</a></li>
@@ -58,7 +49,7 @@
             <div class="left_sidebar"> Quảng Cáo</div>
 
             <div class="content">
-                <h1 text-align="center">Đây là trang chủ</h1>
+                <h1> Đây là trang bán điện thoại Bphone</h1>
             </div>
 
             <div class="right_sidebar">Quảng cáo</div>
