--- a/customer/Vsmart.html
+++ b/customer/Vsmart.html
@@ -19,8 +19,6 @@
                 <input type="text" placeholder="Tìm kiếm..."/>
             </div>
 
-            
-
             <div class="icon">
                 <div >
                     <img src="../public/icon_account.jpg" class="img-64px" alt="icon_account">
@@ -30,15 +28,8 @@
                     <li><a href=""><i> Sign in</i></a></li>
                 </ul>
             </div>
-
-            
-
         </div>
-        <div>
-            <marquee direction="left" behavior="alternate">
-                Chào mừng quý khách đến với di động HP
-            </marquee>
-        </div>
+
         <div id="main">
 
             <div class="menu">
@@ -58,7 +49,7 @@
             <div class="left_sidebar"> Quảng Cáo</div>
 
             <div class="content">
-                <h1 text-align="center">Đây là trang chủ</h1>
+                <h1> Đây là trang bán điện thoại Vsmart</h1>
             </div>
 
             <div class="right_sidebar">Quảng cáo</div>
