change icon account

--- a/customer/home.html
+++ b/customer/home.html
@@ -23,7 +23,7 @@
 
             <div class="icon">
                 <div >
-                    <img src="../public/icon_account.jpg" class="img-64px" alt="icon_account">
+                    <img src="../public/icon_account.png" class="img-64px" alt="icon_account">
                 </div>
                 <ul>
                     <li><a href="../admin/login.html"><i>Login</i></a></li>
