--- a/customer/detailProduct.html
+++ b/customer/detailProduct.html
@@ -58,45 +58,21 @@
             </div>
 
             <div class="content">
-                <a href="detailProduct.html">
                 <div class="product">
                     <img src="../public/imgPhone/iphone.jpg" alt="iphone">
                     <h3>Iphone 13</h3>
                     <div class="starRating"><img src="../public/imgPhone/starRating.png"></div>
                     <p color="red">Giá: 30.000.000 VND</p>
+                </div>          
+                <div>
+                    <h2>Mô tả sản phẩm: </h2>
+                    <p>Bla bla bla</p>
+                    <button>Yêu thích</button>
+                    <button>Mua ngay</button>
+                    <button>Thêm vào giỏi hàng</button>
+                    <button>Chia sẻ</button>
                 </div>
-                </a>
-                <div class="product">
-                    <img src="../public/imgPhone/SSGalaxyZFlip.jpg">
-                    <h3>SSGalaxyZFlip</h3>
-                    <div class="starRating"><img src="../public/imgPhone/starRating.png"></div>
-                    <p color="red">Giá: 23.000.000 VND</p>
-                </div>
-                <div class="product">
-                    <img src="../public/imgPhone/RedmiNote8.png">
-                    <h3>RedmiNote8</h3>
-                    <div class="starRating"><img src="../public/imgPhone/starRating.png"></div>
-                    <p color="red">Giá: 7.000.000 VND</p>
-                </div>
-                <div class="product">
-                    <img src="../public/imgPhone/Vsmart.jpg" alt="iphone">
-                    <h3>Vsmart</h3>
-                    <div class="starRating"><img src="../public/imgPhone/starRating.png"></div>
-                    <p color="red">Giá: 3.000.000 VND</p>
-                </div>
-                <div class="product">
-                    <img src="../public/imgPhone/oppo.jpg">
-                    <h3>Oppo</h3>
-                    <div class="starRating"><img src="../public/imgPhone/starRating.png"></div>
-                    <p color="red">Giá: 9.000.000 VND</p>
-                </div>
-                <div class="product">
-                    <img src="../public/imgPhone/vivo.jpg">
-                    <h3>Vivo</h3>
-                    <div class="starRating"><img src="../public/imgPhone/starRating.png"></div>
-                    <p color="red">Giá: 5.000.000 VND</p>
-                </div>
-              
+                
 
             </div>
 
