--- a/customer/detailIphone.html
+++ b/customer/detailIphone.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Di động Hoa Phước - Trang Chủ</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleDetail.css" />
     
 </head>
 <body>
@@ -42,6 +42,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="home.html">Trang chủ</a></li>
+                    <li><a href="">Sản phẩm thịnh hành</a></li>
                     <li><button id="Vsmart-btn"><a id="Vsmart">Vsmart</a></button></li>
                     <li><a href="">Bphone</a></li>
                     <li><a href="">SamSung</a></li>
