--- a/admin/index.html
+++ b/admin/index.html
@@ -43,7 +43,7 @@
                 <div class="menu-admin">
                     <ul>
                         <a href="">
-                            <li>Dashboard</li>
+                            <li class="active-menu">Dashboard</li>
                         </a>
                         <a href="">
                             <li>Banner</li>
@@ -56,6 +56,9 @@
                         </a>
                         <a href="">
                             <li>Order</li>
+                        </a>
+                        <a href="">
+                            <li>User</li>
                         </a>
                         <a href="">
                             <li>User</li>
